GNOME Bugzilla – Bug 771198
mpegtsdemux: Trying to set NULL string on field 'title' on taglist
Last modified: 2016-11-02 10:54:12 UTC
While reading an RTP stream off the latest git master, the following crash occurs: Starting program: /usr/local/bin/gst-launch-1.0 --gst-debug=1,videotag:1,souphttpclientsink:2,pixelsample:1 udpsrc multicast-iface=eth0 uri=udp://239.106.0.7:1234 caps=application/x-rtp,media=\(string\)video,clock-rate=\(int\)90000 \! rtpbin \! rtpmp2tdepay \! progressreport update-freq=5 \! tsparse \! fakesink [Thread debugging using libthread_db enabled] Using host libthread_db library "/lib/arm-linux-gnueabihf/libthread_db.so.1". Setting pipeline to PAUSED ... [New Thread 0x762ba460 (LWP 12601)] Pipeline is live and does not need PREROLL ... [New Thread 0x758ff460 (LWP 12602)] Setting pipeline to PLAYING ... [New Thread 0x74eff460 (LWP 12603)] New clock: GstSystemClock [New Thread 0x746ff460 (LWP 12604)] [New Thread 0x73eff460 (LWP 12605)] [New Thread 0x734ff460 (LWP 12606)] (gst-launch-1.0:12598): GStreamer-WARNING **: Trying to set NULL string on field 'title' on taglist. Please file a bug. Program received signal SIGTRAP, Trace/breakpoint trap.
+ Trace 236651
Thread 1945105504 (LWP 12605)
Full backtrace: (gdb) bt full
+ Trace 236652
Backtrace stopped: previous frame identical to this frame (corrupt stack?)
The name being returned by gst_mpegts_descriptor_parse_dvb_short_event() seems to be NULL. program->event_id = event->event_id; if ((desc = gst_mpegts_find_descriptor (event->descriptors, GST_MTS_DESC_DVB_SHORT_EVENT))) { gchar *name; if (gst_mpegts_descriptor_parse_dvb_short_event (desc, NULL, &name, NULL)) { /* FIXME : Is it correct to post an event duration as a GST_TAG_DURATION ??? */ program->tags = gst_tag_list_new (GST_TAG_TITLE, name, GST_TAG_DURATION, event->duration * GST_SECOND, NULL); g_free (name); return TRUE; } }
Created attachment 335288 [details] [review] Handle the case when gst_mpegts_descriptor_parse_dvb_short_event() returns a NULL name. Handle the case when gst_mpegts_descriptor_parse_dvb_short_event() returns a NULL name. Resolves the warning: GStreamer-WARNING **: Trying to set NULL string on field 'title' on taglist. Please file a bug.
Thanks for the patch! Pushed with minor changes (inited variables to NULL for extra good measure, moved the FIXME down to where it belongs). commit 7713bb763e02ba684612e50e66f85c7e15143de0 Author: Graham Leggett <minfrin@sharp.fm> Date: Sun Sep 11 00:06:52 2016 +0000 tsdemux: handle a NULL name in DVB short event descriptor Resolves the warning: GStreamer-WARNING **: Trying to set NULL string on field 'title' on taglist. https://bugzilla.gnome.org/show_bug.cgi?id=771198
This was picked into 1.8 as well.